2005-06-07 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Adding users file in CVSROOT for mail blaming 

2005-06-04 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Adding potential support for JPEG-LS DICOM files.

2005-05-22 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Adding potential support for mpeg and jpeg2000 through two new lin
	 - JasPer for JPEG2000
	 - libmpeg2 from the MPEG consortium
	 Also adding intial work to use this lib.

2005-04-26 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Testing/TestAllReadCompareDicom.cxx : update the test printed results and
     description.

2005-04-20 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * FIX : Numerical exception on borland (cannot divide by 0, doh !)
	         But this is a case where we should really signify the user there is
					 few chance the serie is really a serie...

2005-04-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * FIX : on X, the python part is correctly installed. All files are
     installed in gdcm sub-directory

2005-04-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Builder/ : add something to facilitate the RPM creation of gdcm

2005-04-15 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Fix gdcmDirList::IsDirectory. Apparently borland did not like the ending
	 '/'
   * Also fix compilation on gcc 3.3.5 does not have ios::failure either ...

2005-04-11 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * vtk/vtkGdcmWriter fix bug when writing spacing. The Y spacing comes first
	   then the X spacing.
	 * Fix compilation on gcc 2.96 (which does not have ios::failure)

2005-04-05 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDictGroupName.[h|cxx] : add a correlation between a group (number)
     and it's representation name (for the NIH)

2005-03-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>